<resources>
    <string name="app_name">BibLiCtora</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Bottom Navigation Titles -->
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="my_books">My Books</string>

    <string name="image_button">Image Button</string>
    <string name="search">search</string>
    <string name="filter">Filter</string>
    <string name="show_results">Show Results</string>
    <string name="zero_results">0 results</string>

    <string name="heart_view">Favorite Heart Icon</string>
    <string name="item_names">Item Names</string>
    <string name="try_searching_again">The book you are looking for could not be found. Please try searching again.</string>
    <string name="rv_up">Icon up</string>

    <string-array name="languages">
        <item>0,English,en</item>
        <item>1,Finnish,fi</item>
        <item>2,French,fr</item>
        <item>3,German,de</item>
        <item>4,Greek,el</item>
        <item>5,Italian,it</item>
        <item>6,Swedish,sv</item>
        <item>7,Dutch,nl</item>
        <item>8,Spanish,es</item>
        <item>9,Hungarian,hu</item>
        <item>10,Chinese,zh</item>
        <item>11,Portuguese,pt</item>
    </string-array>

    <integer-array name="flag_drawable_ids">
        <item>@drawable/ic_flag_united_kingdom</item>
        <item>@drawable/ic_flag_finland</item>
        <item>@drawable/ic_flag_france</item>
        <item>@drawable/ic_flag_germany</item>
        <item>@drawable/ic_flag_greece</item>
        <item>@drawable/ic_flag_italy</item>
        <item>@drawable/ic_flag_sweden</item>
        <item>@drawable/ic_flag_netherlands</item>
        <item>@drawable/ic_flag_spain</item>
        <item>@drawable/ic_flag_hungary</item>
        <item>@drawable/ic_flag_china</item>
        <item>@drawable/ic_flag_portugal</item>
    </integer-array>

    <string name="ic_biblictora">Icon Biblictora App</string>
    <string name="ic_notification">Icon Notification</string>

    <string name="time_picker_title">Choose a time for notification.</string>
    <string name="no_notification">There are no configured notifications.</string>

    <string name="anonymous">Anonymous</string>
    <string name="reading_now">Reading Now</string>
    <string name="have_read">Have Read</string>
    <string name="reading">Reading</string>
    <string name="will_read">Will Read</string>
    <string name="bookshelves">Bookshelves:</string>
    <string name="languages">Languages:</string>
    <string name="book_picture">Book Picture</string>
    <string name="line">Grey Line</string>
    <string name="ic_have_read">İcon Have Read</string>
    <string name="ic_reading">İcon Reading</string>
    <string name="ic_will_read">İcon Will Read</string>

    <string name="ic_reading_status">İcon Reading Status</string>

    <string name="reading_list_empty">Your reading list is empty!</string>

    <string name="book_detail">Book Detail</string>
    <string name="ic_book">Icon Book</string>
    <string name="reading_book_error">This book is not on your reading list!</string>

</resources>