<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeFragment"
        app:showAsAction="ifRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_selected_home"
        android:title="@string/home" />
    <item
        android:id="@+id/myBooksFragment"
        app:showAsAction="ifRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_selected_book"
        android:title="@string/my_books" />
    <item
        android:id="@+id/favoriteFragment"
        app:showAsAction="ifRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_selected_favorite"
        android:title="@string/favorite" />
</menu>